# templates

./: .gitignore  README.md  alias.json  config.json  rustfmt.toml  shared.sh
choo/: index.js  main
docker/: README.md  main
github/: CONTRIBUTING.md  main
node/: README.md  main
node-bin/: bin.js  main
node-script/: main
note/: main
playground/: main
project/: README.md  main
project-base/: LICENSE-APACHE  LICENSE-MIT  README.md  main
project-choo/: main
project-electron/: index.js  main
project-node/: index.js  main  package.json
project-node/scripts/: test
rust/: Cargo.toml  README.md  error.rs  gitignore  lib.rs  main  main.rs  test  test.rs  travis.yml
rust-bin/: Cargo.toml  build.rs  cli.rs  lib.rs  main  main.rs
script/: main
see-also/: main
shell/: main
talk/: main
template/: main  template.sh
