[package]
name = "{{PROJECTNAME}}"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/{{USERNAME}}/{{PROJECTNAME}}"
documentation = "https://docs.rs/{{PROJECTNAME}}"
description = "{{DESCRIPTION}}"
authors = ["{{AUTHOR}} <{{EMAIL}}>"]
readme = "README.md"

[dependencies]

[dev-dependencies]
clippy = "0.0"
