[package]
name = "{{PROJECTNAME}}"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/{{USERNAME}}/{{PROJECTNAME}}"
documentation = "https://docs.rs/{{PROJECTNAME}}"
description = "{{DESCRIPTION}}"
keywords = [{{KEYWORDS}}]
categories = [{{CATEGORIES}}]
authors = ["{{AUTHOR}} <{{EMAIL}}>"]
readme = "README.md"

[dependencies]

[dev-dependencies]
